--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -4,9 +4,13 @@
     <group android:checkableBehavior="single">
 
         <item
-            android:id="@+id/nav_route"
+            android:id="@+id/nav_search"
             android:icon="@drawable/ic_search"
             android:title="@string/btn_search"/>
+        <item
+            android:id="@+id/nav_map"
+            android:icon="@drawable/tab_map"
+            android:title="@string/btn_map"/>
     </group>
     <group android:id="@+id/group_prefs">
     </group>
