--- a/app/src/main/res/layout/fragment_coin.xml
+++ b/app/src/main/res/layout/fragment_coin.xml
@@ -83,5 +83,21 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
         </android.support.constraint.ConstraintLayout>
+
+        <FrameLayout
+            android:id="@+id/child_fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/coreImage"
+            android:orientation="horizontal">
+
+        </FrameLayout>
+
+        <FrameLayout
+            android:id="@+id/child_fragment_container_2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/child_fragment_container"
+            android:orientation="horizontal"/>
     </LinearLayout>
 </ScrollView>
