--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -11,6 +11,10 @@
             android:id="@+id/nav_map"
             android:icon="@drawable/tab_map"
             android:title="@string/btn_map"/>
+        <item
+            android:id="@+id/nav_copy_db"
+            android:icon="@drawable/ic_file_download"
+            android:title="@string/btn_savedb"/>
     </group>
     <group android:id="@+id/group_prefs">
     </group>
