--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -159,7 +159,7 @@
         <item name="android:minHeight">42dp</item>
         <item name="android:layout_margin">4dp</item>
         <item name="android:textSize">14sp</item>
-        <item name="android:background">@drawable/button_style_red</item>
+        <item name="android:background">@drawable/button_style</item>
         <item name="android:textColor">@color/white</item>
     </style>
 
