--- a/app/src/main/res/layout/fragment_flying_coin.xml
+++ b/app/src/main/res/layout/fragment_flying_coin.xml
@@ -5,10 +5,14 @@
     android:layout_height="match_parent"
     tools:context="com.sdimdev.nnhackaton.presentation.view.game.FlyingCoinFragment">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="20dp">
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/img"
         android:layout_width="30dp"
         android:layout_height="30dp"
 
         app:srcCompat="@drawable/default_image" />
+    </RelativeLayout>
 </FrameLayout>
