--- a/app/src/main/res/layout/fragment_coin.xml
+++ b/app/src/main/res/layout/fragment_coin.xml
@@ -91,27 +91,18 @@
 
         </android.support.constraint.ConstraintLayout>
 
-        <FrameLayout
-            android:id="@+id/child_fragment_container_t"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/coreImage"
-            android:orientation="horizontal">
-
-        </FrameLayout>
 
 
         <FrameLayout
             android:id="@+id/child_fragment_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:orientation="horizontal" />
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:paddingTop="100dp">
+            android:gravity="center_horizontal">
 
             <TextView
                 android:id="@+id/bonusText"
