--- a/app/src/main/res/layout/fragment_coin.xml
+++ b/app/src/main/res/layout/fragment_coin.xml
@@ -79,16 +79,6 @@
                 app:layout_constraintTop_toTopOf="@id/enterButton"
                 app:layout_constraintVertical_bias="0.0" />
 
-            <TextView
-                android:id="@+id/balance"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:text="0"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/coreImage"
-                app:layout_constraintTop_toTopOf="parent" />
-
         </android.support.constraint.ConstraintLayout>
 
 
@@ -97,7 +87,36 @@
             android:id="@+id/child_fragment_container"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:orientation="horizontal" />
+            android:orientation="horizontal" >
+
+
+        </FrameLayout>
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/textView4"
+                android:textColor="@color/colorPrimaryLight"
+                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Количество бонусов:"
+                android:layout_centerHorizontal="true"
+                tools:layout_editor_absoluteX="58dp" />
+
+            <TextView
+                android:id="@+id/balance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimaryLight"
+                android:textStyle="bold"
+                android:text="0"
+                android:layout_marginStart="20dp"
+                app:layout_constraintStart_toEndOf="@+id/textView4"
+                app:layout_constraintTop_toTopOf="@+id/textView4" />
+        </android.support.constraint.ConstraintLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
