--- a/app/src/main/res/layout/fragment_coin.xml
+++ b/app/src/main/res/layout/fragment_coin.xml
@@ -94,28 +94,37 @@
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="100dp">
 
             <TextView
-                android:id="@+id/textView4"
-                android:textColor="@color/colorPrimaryLight"
-                android:textStyle="bold"
+                android:id="@+id/duration"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Количество бонусов:"
+                android:textColor="@color/colorPrimaryLight"
+                android:textStyle="bold"
+                app:layout_constraintTop_toBottomOf="@+id/bonus_quantity_text"
+                tools:layout_editor_absoluteX="58dp" />
+
+            <TextView
+                android:id="@+id/bonus_quantity_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
+                android:text="Количество бонусов:"
+                android:textColor="@color/colorPrimaryLight"
+                android:textStyle="bold"
                 tools:layout_editor_absoluteX="58dp" />
 
             <TextView
                 android:id="@+id/balance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:text="0"
                 android:textColor="@color/colorPrimaryLight"
                 android:textStyle="bold"
-                android:text="0"
-                android:layout_marginStart="20dp"
-                app:layout_constraintStart_toEndOf="@+id/textView4"
-                app:layout_constraintTop_toTopOf="@+id/textView4" />
+                app:layout_constraintStart_toEndOf="@+id/bonus_quantity_text"
+                app:layout_constraintTop_toTopOf="@+id/bonus_quantity_text" />
         </android.support.constraint.ConstraintLayout>
 
         <RelativeLayout
